--- a/publications/index.html
+++ b/publications/index.html
@@ -6,7 +6,13 @@ layout: default
 	<div class="publications">
 		<h2>Publications</h2>
 
-	<p>Boroshok A.L., Park A.T., Fotiadis, P., Velasquez G.H., <strong> Tooley, U.A. </strong>, Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. Individual differences in frontoparietal plasticity in humans.<em> npj Science of Learning, 7, 14.</em> <a href="Boroshok et al. - 2022 - Individual differences in frontoparietal plasticit.pdf" class="paper" target="_blank">pdf</a> </p>
+	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. (2022). The age of reason: Functional brain network development from early to middle childhood. <em> The Journal of Neuroscience.</em> 42(44):8237–8251. <a href="Tooley et al. - 2022 - The Age of Reason Functional Brain Network Develo.pdf" class="paper" target="_blank">pdf</a> </p>
+
+	<p>Park, A. T., Richardson, H., <strong>Tooley, U.A.</strong>, McDermott, C.L., Boroshok, A. L., Ke, A., Leonard, J. A., Tisdall, M.D., Deater-Deckard, K., Edgar, J.C., & Mackey, A.P. (2022). Early stressful experiences are associated with reduced neural responses to naturalistic emotional and social content in children. <em>Developmental Cognitive Neuroscience</em>. <a href="Park et al. - 2022 - Early stressful experiences are associated.pdf" class="paper" target="_blank">pdf</a> </p>
+
+	<p> Richie-Halford, A., Cieslak, M., Ai, L. ... The Fibr Community Science Consortium including <strong>Tooley, U.A.</strong> ... Satterthwaite, T. D., & Rokem, A. (2022). An analysis-ready and quality controlled resource for pediatric brain white-matter research. <em> Scientific Data.</em> 9, 616. <a href="Richie-Halford et al., An analysis-ready and quality controlled resource for pediatric brain white-matter research.pdf" class="paper" target="_blank">pdf</a> </p>
+
+	<p>Boroshok A.L., Park A.T., Fotiadis, P., Velasquez G.H., <strong> Tooley, U.A. </strong>, Simon K.R., Forde J.C.P., Tisdall M.D., Cooper E.A., & Mackey A.P. (2022). Individual differences in frontoparietal plasticity in humans.<em> npj Science of Learning.</em> 7, 14. <a href="Boroshok et al. - 2022 - Individual differences in frontoparietal plasticit.pdf" class="paper" target="_blank">pdf</a> </p>
 
 	<p><strong> Tooley, U.A. </strong> Bassett, D.S. & Mackey, A.P. (2022). Functional brain network community structure in childhood: Unfinished territories and fuzzy boundaries. <em> Neuroimage. </em> 118843. <a href="Tooley et al. - 2022 - Functional brain network community structure in ch.pdf" class="paper" target="_blank">pdf</a> </p>
 
@@ -29,13 +35,13 @@ Satterthwaite, T. D., Bassett, D. S. (2020). Associations between neighborhood S
 
 	<p><strong>Submitted or under review</strong></p>
 
-	<p><strong> Tooley, U.A. </strong>, Park, A. T., Leonard, J. A., Boroshok, A. L., McDermott, C.L., Tisdall, M.D., & Mackey, A.P. The age of reason: Functional brain network development from early to middle childhood. <em> Under review.</em> <a href="https://www.biorxiv.org/content/10.1101/2022.07.07.499176v1">preprint</a></p>
-
-	<p>Park, A. T., Richardson, H., <strong>Tooley, U.A.</strong>, McDermott, C.L., Boroshok, A. L., Ke, A., Leonard, J. A., Tisdall, M.D., Deater-Deckard, K., Edgar, J.C., & Mackey, A.P. Early stressful experiences are associated with reduced neural responses to naturalistic emotional and social content in children. <em>Under revision</em>. <a href="https://psyarxiv.com/gdp5v/">preprint</a></p>
-
 	<p>McDermott, C.L., Lee, J., Park, A.T., <strong>Tooley, U.A.</strong>, Boroshok, A.L., Hilton, K., Mupparapu, M., Mackey, A.P. Molar eruption timing is associated with cognitive development. <em>Under review. </em> <a href="https://psyarxiv.com/t2qg5/">preprint</a></p>
 
 	<p> <font size="+2"> Selected publications</font></p>
+	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
+	<p><a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
+	Childhood socioeconomic status (SES), a measure of the availability of material and social resources, is one of the strongest predictors of lifelong well-being. Here, we suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity. We argue that higher childhood SES is associated with protracted structural brain development and a prolonged trajectory of functional network segregation, ultimately leading to more efficient cortical networks in adulthood. We hypothesize that greater exposure to chronic stress accelerates brain maturation, whereas greater access to novel positive experiences decelerates maturation. We also discuss the impact of variation in the pace of brain development on plasticity and learning.</p>
+	<u> Press </u> <br>
 	<img src="website_fig-01.png" class="paper" align="right" width="400" alt="schematic_tooley">
 	<p><a href="Tooley et al. - 2021 - Environmental influences on the pace of brain deve.pdf" class="paper" target="_blank">Environmental influences on the pace of brain development. </a> <em>Nature Reviews Neuroscience</em> (2021).
 	Childhood socioeconomic status (SES), a measure of the availability of material and social resources, is one of the strongest predictors of lifelong well-being. Here, we suggest that experiences associated with childhood SES affect not only the outcome but also pace of brain development, with implications for neural plasticity. We argue that higher childhood SES is associated with protracted structural brain development and a prolonged trajectory of functional network segregation, ultimately leading to more efficient cortical networks in adulthood. We hypothesize that greater exposure to chronic stress accelerates brain maturation, whereas greater access to novel positive experiences decelerates maturation. We also discuss the impact of variation in the pace of brain development on plasticity and learning.</p>
